--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "@types/node": "12.7.3",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-redux": "^7.1.2",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
     "bulma": "^0.7.5",
     "csv-parser": "^2.3.0",
+    "immutability-helper": "^3.0.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "styled-components": "^4.3.2",
     "typescript": "3.6.2"
   },
