--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-redux": "^7.1.2",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
+    "@types/styled-components": "^4.1.18",
     "bulma": "^0.7.5",
     "csv-parser": "^2.3.0",
     "immutability-helper": "^3.0.1",
@@ -20,6 +21,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-vis": "^1.11.7",
     "redux": "^4.0.4",
     "styled-components": "^4.3.2",
     "typescript": "3.6.2"
